# silo

./: .gitignore  AGENTS.md  README.md  biome.json  next.config.mjs  package-lock.json  package.json  playwright.config.ts  silo.code-workspace  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: release.yml
app/: globals.css  layout.tsx  page.tsx
app/(home)/: page.tsx
app/components/: dialog.tsx  git-bar.tsx  new-workspace.tsx  popover.tsx  projects-bar.tsx  status-bar.tsx  status-icons.tsx  terminal-loader.tsx  toast.tsx  toaster.tsx  tooltip.tsx  top-bar.tsx  workspace-status.tsx
app/hooks/: use-projects.ts  use-toast.ts
app/icons/: chrome.tsx  claude.tsx  codex.tsx  gcloud.tsx  gh.tsx  logo.tsx  silo.tsx
app/workspace/: layout.tsx  page.tsx  pending.tsx  prompt.tsx  templating.tsx
app/workspace/resuming/: page.tsx
app/workspace/saving/: page.tsx
app/workspace/session/: page.tsx
app/workspace/terminal/: bindings.test.ts  bindings.ts  output.test.ts  output.ts  page.tsx
components/: dialog.tsx  git-bar.tsx  loader.tsx  new-workspace.tsx  open-project.tsx  overlay-state.tsx  popover.tsx  projects-bar.tsx  prompt-context.tsx  status-icons.tsx  toaster.tsx  tooltip.tsx  top-bar.tsx  workspace-state.tsx  workspace-status.tsx
components/cloud/: browser.tsx  index.tsx  terminal.tsx
components/icons/: claude.tsx  codex.tsx
driver/: README.md  app.ts  cli.ts  paths.ts  preflight.ts  processes.test.ts  processes.ts  recorder.ts  runtime.ts  selectors.ts  session-store.ts  types.ts  utils.ts
lib/: cloud.ts  git.ts  invoke.ts  logging.ts  projects.ts  shortcuts.ts  templates.ts  workspaces.ts
patches/tauri-runtime-cef/: Cargo.toml
patches/tauri-runtime-cef/src/: cef_impl.rs  cef_webview.rs  lib.rs  utils.rs
patches/tauri-runtime-cef/src/cef_impl/: cookie.rs  drag_window.rs  request_handler.rs
patches/tauri-runtime-cef/src/cef_webview/: linux.rs  macos.rs  windows.rs
scripts/: check-tailwind-custom-variants.ts  e2e-live-preflight.ts  prepare-tauri-config.ts  reset_gcp.py  reset_gcp.ts  tauri.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.prod.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons-dev/: icon.icns
src-tauri/scripts/: base-image-provision.sh
src-tauri/src/: agent_sessions.rs  bootstrap.rs  browser.rs  browser_file_server.rs  browser_loopback.rs  build_info.rs  chrome.rs  claude.rs  codex.rs  config.rs  files.rs  gcloud.rs  gcp.rs  gh.rs  git.rs  lib.rs  logging.rs  main.rs  projects.rs  prompts.rs  remote.rs  river_names.rs  router.rs  startup_env.rs  state.rs  state_paths.rs  system.rs  templates.rs  terminal.rs  tls.rs  workspaces.rs
src/app/: main.tsx  providers.tsx  router.tsx  shell.tsx  styles.css  updater.tsx
src/dashboard/: onboarding.tsx  page.tsx  setup-status.tsx
src/projects/: api.ts
src/projects/sidebar/: index.tsx  new-workspace.tsx  open-project.tsx
src/shared/lib/: focus-debug.ts  invoke-cache.test.ts  invoke-cache.ts  invoke.ts  page-foreground.test.ts  page-foreground.ts  shortcuts.ts  use-shortcut.ts
src/shared/ui/: dialog.tsx  image.tsx  loader.tsx  overlay-state.tsx  popover.tsx  toaster.tsx  tooltip.tsx
src/workspaces/: api.test.ts  api.ts  state-events.test.ts  state-events.ts  state.tsx
src/workspaces/browser/: events.test.ts  events.ts  header.tsx  host.tsx  view.tsx
src/workspaces/files/: api.ts  browser.test.ts  browser.ts  context.tsx  explorer.tsx  icons.tsx  local-state.test.ts  local-state.ts  view.tsx
src/workspaces/git/: api.ts  checks.tsx  context.tsx  diff.tsx  header.tsx  sidebar.tsx  tabs.tsx  toggle.tsx  top-bar-actions.tsx
src/workspaces/hosts/: model.ts  provider.tsx  viewport.tsx
src/workspaces/layout/: shell.tsx  status.tsx  top-bar.tsx
src/workspaces/prompt/: draft.tsx  screen.tsx
src/workspaces/routes/: page.tsx  params.ts  paths.ts  resuming-page.tsx  saving-page.tsx  session-page.tsx  transition-screens.tsx  updating.tsx
src/workspaces/template/: screen.tsx
src/workspaces/terminal/: bindings.test.ts  bindings.ts  host.tsx  reconnect.test.ts  reconnect.ts  recovery.test.ts  recovery.ts  refresh.test.ts  refresh.ts  session.ts  view.tsx
tests/e2e/: live-smoke.spec.ts
tests/e2e/fixtures/: silo.ts
tools/base-image/: Cargo.toml
tools/base-image/scripts/: base-image-provision.sh
tools/base-image/src/: main.rs
tools/workspace-agent/: Cargo.toml
tools/workspace-agent/src/: args.rs  assistant.rs  cli.rs  files.rs  lib.rs  main.rs  metadata.rs  runtime.rs  tests.rs
tools/workspace-agent/src/daemon/: mod.rs  state.rs  zmx.rs
tools/workspace-observer/: Cargo.toml
tools/workspace-observer/src/: assistant.rs  cli.rs  files.rs  main.rs  metadata.rs  runtime.rs  tests.rs
tools/workspace-observer/src/daemon/: mod.rs  zmx.rs
website/: next.config.ts  package.json
website/app/: github-stars.tsx  globals.css  layout.tsx  page.tsx
website/app/download/: route.ts
website/app/update/: route.ts
website/lib/: github-releases.ts
workspace/: index.html
