[package]
name = "silo"
version = "0.1.0"
description = "Cloud development environments"
authors = ["Bryce Bjork"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "silo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
tauri = { version = "2", features = ["protocol-asset", "unstable", "macos-proxy"] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
toml = { version = "0.9", features = ["preserve_order"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
sysinfo = "0.38.4"
log = "0.4"
portable-pty = "0.9.0"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
sha2 = "0.10"
urlencoding = "2"
