[package]
name = "Silo"
version = "0.1.0"
description = "Cloud development environments"
authors = ["Bryce Bjork"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "silo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
base64 = "0.22"
tauri-build = { git = "https://github.com/tauri-apps/tauri", branch = "feat/cef", features = [] }

[dependencies]
anyhow = "1"
tauri = { git = "https://github.com/tauri-apps/tauri", branch = "feat/cef", default-features = false, features = ["cef", "protocol-asset", "unstable", "devtools"] }
tauri-runtime-cef = { git = "https://github.com/tauri-apps/tauri", branch = "feat/cef" }
tauri-plugin-opener = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
toml = { version = "0.9", features = ["preserve_order"] }
tauri-plugin-dialog = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
tauri-plugin-fs = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
tauri-plugin-updater = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
sysinfo = "0.38.4"
log = "0.4"
portable-pty = "0.9.0"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
sha2 = "0.10"
urlencoding = "2"
url = "2"
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
jsonwebtoken = { version = "10.3.0", default-features = false, features = ["use_pem", "aws_lc_rs"] }
tokio = { version = "1", features = ["sync"] }

[patch.crates-io]
tauri = { git = "https://github.com/tauri-apps/tauri", branch = "feat/cef" }
tauri-build = { git = "https://github.com/tauri-apps/tauri", branch = "feat/cef" }
tauri-codegen = { git = "https://github.com/tauri-apps/tauri", branch = "feat/cef" }
tauri-macros = { git = "https://github.com/tauri-apps/tauri", branch = "feat/cef" }
tauri-plugin = { git = "https://github.com/tauri-apps/tauri", branch = "feat/cef" }
tauri-runtime = { git = "https://github.com/tauri-apps/tauri", branch = "feat/cef" }
tauri-utils = { git = "https://github.com/tauri-apps/tauri", branch = "feat/cef" }

[patch."https://github.com/tauri-apps/tauri"]
tauri-runtime-cef = { path = "../patches/tauri-runtime-cef" }
