[package]
name = "workspace-observer"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
portable-pty = "0.9.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting"] }
